# laser_evaluator

./: .gitignore  README.md
script/: allen_watermarking.sh  on_lasers.sh  on_lasers_client_1.sh  on_lasers_client_2.sh  on_lasers_client_3.sh  on_lasers_client_4.sh  on_lasers_server.sh  shoot.sh
script/temp/: CMakeLists.txt  package.xml  templete.cpp
src/calibrator/: CMakeLists.txt  package.xml
src/calibrator/include/calibrator/: matcher.hpp  parameter.hpp  sensor.hpp
src/calibrator/launch/: calibrator_G4.launch  calibrator_TG.launch
src/calibrator/src/: main.cpp  matcher.cpp
src/calibrator/urdf/: TG.urdf  TG_new.urdf  ydlidar_eval.urdf
src/calibrator_server/: CMakeLists.txt  package.xml
src/calibrator_server/include/calibrator_server/: matcher.hpp  parameter.hpp  sensor.hpp  templete.hpp
src/calibrator_server/launch/: calibrator_TG.launch
src/calibrator_server/src/: calibrator_server.cpp  matcher.cpp
src/calibrator_server/urdf/: TG_new.urdf  ydlidar_test.urdf  ydlidar_test1.urdf
src/sensors/: CMakeLists.txt  package.xml
src/sensors/include/sensors/: sensor.hpp  templete.hpp
src/sensors/src/: main.cpp
src/tracker/: CMakeLists.txt  package.xml
src/tracker/include/tracker/: Flag.hpp  ICP.hpp  KCF_laser.hpp  MouseInterface.hpp  gui.hpp  logger.hpp  parameter.hpp  sensor.hpp  templete.hpp  tracker.hpp
src/tracker/src/: ICP.cpp  MouseInterface.cpp  main.cpp  tracker.cpp
