<?xml version="1.0"?>
<package format="2">
  <name>calibrator_server</name>
  <version>0.0.0</version>
  <description>The templete package for launching</description>

  <maintainer email="jhkim@cogaplex.com">allenkim</maintainer>

  <license>COGAPLEX</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>

  </export>
</package>
